fix button layout on mobile

--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -33,10 +33,6 @@
       }
     }
   }
-
-  @media screen and (max-width: 400px) {
-    display: block;
-  }
 }
 
 .button.is-outlined.is-video {
